name:                imp
version:             0.1.0.0
synopsis:            Compiler for IMP programming language
description:         This is a compiler for IMP programming language
                     implemented in Haskell. It uses LLVM as compiler
                     backend.
homepage:            https://github.com/eugmes/imp#readme
license:             MIT
license-file:        LICENSE
author:              Ievgenii Meshcheriakov
maintainer:          eugen@debian.org
copyright:           2017 Ievgenii Meshcheriakov
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          stdlib/impstd.c
                   , stdlib/impstd.h

source-repository head
  type:                git
  location:            https://github.com/eugmes/imp.git

library
  hs-source-dirs:      lib
  exposed-modules:     IMP.AST
                     , IMP.Parser
                     , IMP.Parser.Error
                     , IMP.Codegen.GlobalCodegen
                     , IMP.Codegen.SubCodegen
                     , IMP.Codegen.Utils
                     , IMP.Codegen.Error
                     , IMP.Emit
                     , IMP.SymbolTable
                     , IMP.SourceLoc
                     , Test.Tasty.IMP
  other-modules:       Paths_imp
  ghc-options:         -Wall -fno-warn-name-shadowing -Wcompat
  build-depends:       base >= 4.7 && < 5
                     , megaparsec == 6.*
                     , text
                     , llvm-hs-pure == 7.*
                     , llvm-hs == 7.*
                     , containers
                     , mtl
                     , bytestring
                     , utf8-string
                     , composition-extra
                     , text-show
                     , tasty
                     , temporary
                     , process-extras
                     , filepath
                     , stringbuilder
  default-language:    Haskell2010

executable impc
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Paths_imp
  ghc-options:         -rtsopts -Wall -fno-warn-name-shadowing -Wcompat
  build-depends:       base
                     , imp
                     , megaparsec == 6.*
                     , text
                     , llvm-hs == 7.*
                     , bytestring
                     , optparse-applicative
                     , containers
                     , temporary
                     , filepath
                     , process
  default-language:    Haskell2010

test-suite testsuite
  type: exitcode-stdio-1.0
  build-depends:
      base
    , imp
    , megaparsec == 6.*
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck
    , text
  other-modules:
    IMP.Test.Parser
    IMP.Test.Tests
    CompilerTests
  hs-source-dirs: test
  main-is: TestSuite.hs
  default-language: Haskell2010
